<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">

    <CheckBox
        android:id="@+id/checkbox_normal_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        android:text="@string/normal_type"/>

    <CheckBox
        android:id="@+id/checkbox_satellite_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        android:text="@string/satellite_type"/>

    <CheckBox
        android:id="@+id/checkbox_terrain_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        android:text="@string/terrain_type"/>

    <CheckBox
        android:id="@+id/checkbox_hybrid_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        android:text="@string/hybrid_type"/>
    <Button
        android:id="@+id/button_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ok"/>
</LinearLayout>