<fragment
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MapsActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_weight="1"
        android:background="#99000000">

        <EditText
            android:id="@+id/departure_adress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/departure_address"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="68dp"
        android:background="#99000000"
        >

        <EditText
            android:id="@+id/arrival_adress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/arrival_address"
            />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/zoomout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zoom_out"
            />

        <Button
            android:id="@+id/zoomin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zoom_in"
            />

    </LinearLayout>

    <ImageButton
        android:id="@+id/buttonsearch"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_gravity="right|top"
        android:layout_marginTop="36dp"
        android:background="@drawable/search"/>

    <ImageButton
        android:id="@+id/button_geoloc"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_gravity="bottom|left"
        android:layout_marginTop="36dp"
        android:background="@drawable/geloc"/>

    <Button
        android:id="@+id/map_type_button"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginLeft="12dp"
        android:text="@string/display_type"
        />


</fragment>